--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,4 @@ GoogleCloudSpeechToText_kotlinVersion=1.5.20
 GoogleCloudSpeechToText_compileSdkVersion=28
 GoogleCloudSpeechToText_buildToolsVersion=28.0.3
 GoogleCloudSpeechToText_targetSdkVersion=28
+protoc_platform=osx-x86_64
